[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/LeftRightSelectionPanel/Assets/RightArrowButton_Normal.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/LeftRightSelectionPanel/Assets/RightArrowButton_Highlighted.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/LeftRightSelectionPanel/Assets/LeftArrowButton_Highlighted.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/LeftRightSelectionPanel/Assets/LeftArrowButton_Normal.png" type="Texture" id=4]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/Assets/WhiteLine_11x11.png" type="Texture" id=5]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/MapSelectionPanel/MapSelectionPanel.gd" type="Script" id=6]

[node name="MapSelectionPanel" type="MarginContainer"]
margin_right = 670.0
margin_bottom = 250.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 670.0
margin_bottom = 250.0
mouse_filter = 2
custom_constants/separation = 5

[node name="LeftButton" type="TextureButton" parent="HBoxContainer"]
margin_top = 110.0
margin_right = 30.0
margin_bottom = 140.0
size_flags_vertical = 6
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 35.0
margin_right = 635.0
margin_bottom = 250.0
rect_min_size = Vector2( 600, 250 )
mouse_filter = 2

[node name="BodyBackground" type="TextureRect" parent="HBoxContainer/MarginContainer"]
margin_right = 600.0
margin_bottom = 250.0
mouse_filter = 2
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="HBoxContainer/MarginContainer"]
margin_right = 11.0
margin_bottom = 250.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="HBoxContainer/MarginContainer"]
margin_left = 589.0
margin_right = 600.0
margin_bottom = 250.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 5 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="HBoxContainer/MarginContainer"]
margin_right = 600.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="HBoxContainer/MarginContainer"]
margin_top = 239.0
margin_right = 600.0
margin_bottom = 250.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 5 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
margin_right = 600.0
margin_bottom = 250.0
mouse_filter = 2
custom_constants/margin_right = 17
custom_constants/margin_top = 17
custom_constants/margin_left = 17
custom_constants/margin_bottom = 17

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer"]
margin_left = 17.0
margin_top = 17.0
margin_right = 583.0
margin_bottom = 233.0
mouse_filter = 2
custom_constants/separation = 5

[node name="MapRow01" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 566.0
margin_bottom = 105.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MapRow02" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 566.0
margin_bottom = 216.0
mouse_filter = 2
size_flags_vertical = 3

[node name="RightButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 640.0
margin_top = 110.0
margin_right = 670.0
margin_bottom = 140.0
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[connection signal="button_up" from="HBoxContainer/LeftButton" to="." method="_on_LeftButton_button_up"]
[connection signal="button_up" from="HBoxContainer/RightButton" to="." method="_on_RightButton_button_up"]
